--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CSS Diner</title>
+    <title>CSS Dinner</title>
     <link rel="icon" href="images/favicon.png" />
     <link rel="stylesheet" href="CSS/reset.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
     <header>
-      <h1>CSS Diner Shopping List</h1>
+      <h1>CSS Dinner Shopping List</h1>
       <h2>Let's go to the mall!</h2>
     </header>
 
@@ -20,7 +20,7 @@
         <li>
           <input type="checkbox" id="check1" />
           <label for="check1">
-            lot of pickles <small>for the next lassons about CSS</small>
+            A lot of pickles <small>for the next lassons about CSS</small>
           </label>
         </li>
         <li>
